removed submodule to be the main module - parent module was not needed. Updated POM to accommodate tomcat deployment.